# gemini-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: gemini-gateway-seed.dev.yaml
core/: __init__.py  audit_sanitizer.py  error_taxonomy.py  logger.py  number_parsing.py  provider_metadata.py  secret_redaction.py  service_lifecycle.py  string_parsing.py  wide_events.py
gemini_gateway/: __init__.py  api.py  config.py  contracts.py  cooldown.py  embedding_client.py  errors.py  gemini_client.py  http_client_pool.py  main.py  provider_http_errors.py  repository.py  retention.py  security.py  seed.py  service.py  tts_client.py  value_extractors.py
gemini_gateway/db/: __init__.py  models.py  session.py
migrations/: __init__.py  env.py
migrations/versions/: 0001_gateway_schema.py  __init__.py
scripts/: audit_gemini_gateway_routes.py  clone_gateway_data.ps1  clone_gateway_data.sql  gemini_gateway_cli_errors.py  probe_gemini_gateway_proxies.py
tests/: db_test_policy.py
tests/gemini_gateway/: test_contracts.py  test_cooldown.py  test_data_clone_script.py  test_embedding_client.py  test_gateway_api.py  test_gateway_api_embeddings.py  test_gateway_cli_errors.py  test_gemini_client.py  test_lifecycle.py  test_main.py  test_provider_http_errors.py  test_proxy_probe.py  test_repository_postgres.py  test_repository_sql.py  test_route_pool_audit.py  test_routing.py  test_security.py  test_seed.py  test_settings.py  test_standalone_boundaries.py  test_tts_client.py  test_value_extractors.py
