[project]
name = "gemini-gateway"
version = "0.1.0"
description = "Proxy-only Gemini gateway with key/proxy routing, quotas and cooldowns."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gemini_gateway", "core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "db: tests that require a reachable PostgreSQL instance",
]
